enable_language(): Fail if called before project()

Fixes: #25550