Help/release/dev/enable_language-before-project.rst
@@ -1,0 +1,6 @@
+enable_language-before-project
+------------------------------
+
+* The :command:`enable_language` command now fails with an error
+  if it is called before the first :command:`project` call.
+  See policy :policy:`CMP0165`.
