Tests/RunCMake/CMP0165/CMP0165-NEW.cmake
@@ -1,0 +1,2 @@
+cmake_policy(SET CMP0165 NEW)
+enable_language(C)
