Tests/RunCMake/CMP0165/CMP0165-WARN.cmake
@@ -1,0 +1,2 @@
+# Don't touch the policy, it should warn by default
+enable_language(C)
